--- a/components/tree-select/style/_tree.scss
+++ b/components/tree-select/style/_tree.scss
@@ -235,14 +235,6 @@ li.adui-tree-select-tree-treenode-disabled
   > .adui-tree-select-tree-node-content-wrapper:hover {
   background: transparent;
 }
-.adui-tree-select-tree-icon__open {
-  margin-right: 2px;
-  vertical-align: top;
-}
-.adui-tree-select-tree-icon__close {
-  margin-right: 2px;
-  vertical-align: top;
-}
 .adui-tree-select-tree-dropdown {
   margin: 0;
   padding: 0;
@@ -258,20 +250,6 @@ li.adui-tree-select-tree-treenode-disabled
   display: block;
   padding: 4px;
   background: #fff;
-}
-.adui-tree-select-tree-dropdown
-  .adui-tree-select-dropdown-search
-  .adui-tree-select-search__field__wrap {
-  width: 100%;
-}
-.adui-tree-select-tree-dropdown
-  .adui-tree-select-dropdown-search
-  .adui-tree-select-search__field {
-  padding: 4px 7px;
-  width: 100%;
-  border: 1px solid #d9d9d9;
-  border-radius: 4px;
-  outline: none;
 }
 .adui-tree-select-tree-dropdown
   .adui-tree-select-dropdown-search.adui-tree-select-search--hide {
@@ -336,266 +314,19 @@ li.adui-tree-select-tree-treenode-disabled
 .adui-tree-select-disabled .adui-tree-select-selection:active {
   box-shadow: none;
 }
-.adui-tree-select-disabled
-  .adui-tree-select-selection--multiple
-  .adui-tree-select-selection__choice {
-  padding-right: 10px;
-  color: rgba(0, 0, 0, 0.33);
-  background: #f5f5f5;
-}
-.adui-tree-select-disabled
-  .adui-tree-select-selection--multiple
-  .adui-tree-select-selection__choice__remove {
-  display: none;
-}
-.adui-tree-select-selection--single {
-  position: relative;
-  height: 30px;
-  background-color: #fff;
-  cursor: pointer;
-
-  box-shadow: 0 3px 2px 0 rgba(0, 0, 0, 0.03), 0 0 0 1px var(--gray-400);
-
-  &:hover {
-    background-color: var(--gray-100);
-    box-shadow: 0 3px 2px 0 rgba(0, 0, 0, 0.03), 0 0 0 1px var(--gray-500);
+.adui-tree-select-single .adui-tree-select-selector {
+  &::before {
+    content: "\00a0";
+    opacity: 0;
+    width: 0;
+    line-height: 0;
   }
-
-  &:active {
-    background-color: var(--gray-200);
-    box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.04), 0 0 0 1px var(--gray-500);
-  }
-}
-.adui-tree-select-selection__rendered {
-  position: relative;
-  display: block;
-  margin-left: 13px;
-  margin-right: 9px;
-  line-height: 30px;
-}
-.adui-tree-select-selection__rendered::after {
-  display: inline-block;
-  width: 0;
-  visibility: hidden;
-  pointer-events: none;
-  content: ".";
 }
 .adui-tree-select-lg {
   font-size: 16px;
 }
-.adui-tree-select-lg .adui-tree-select-selection--single {
-  height: 40px;
-}
-.adui-tree-select-lg .adui-tree-select-selection__rendered {
-  line-height: 38px;
-}
-.adui-tree-select-lg .adui-tree-select-selection--multiple {
-  min-height: 40px;
-}
-.adui-tree-select-lg
-  .adui-tree-select-selection--multiple
-  .adui-tree-select-selection__rendered
-  li {
-  height: 30px;
-  line-height: 30px;
-}
-.adui-tree-select-lg
-  .adui-tree-select-selection--multiple
-  .adui-tree-select-arrow {
-  top: 20px;
-}
-.adui-tree-select-sm .adui-tree-select-selection--single {
-  height: 24px;
-}
-.adui-tree-select-sm .adui-tree-select-selection__rendered {
-  margin: 0 7px;
-  line-height: 22px;
-}
-.adui-tree-select-sm .adui-tree-select-selection--multiple {
-  min-height: 24px;
-}
-.adui-tree-select-sm
-  .adui-tree-select-selection--multiple
-  .adui-tree-select-selection__rendered
-  li {
-  height: 16px;
-  line-height: 14px;
-}
-.adui-tree-select-sm
-  .adui-tree-select-selection--multiple
-  .adui-tree-select-arrow {
-  top: 12px;
-}
 .adui-tree-select-sm .adui-tree-select-arrow {
   right: 8px;
-}
-.adui-tree-select-disabled .adui-tree-select-selection__choice__remove {
-  color: rgba(0, 0, 0, 0.25);
-  cursor: default;
-}
-.adui-tree-select-disabled .adui-tree-select-selection__choice__remove:hover {
-  color: rgba(0, 0, 0, 0.25);
-}
-.adui-tree-select-search__field__wrap {
-  position: relative;
-  display: inline-block;
-}
-.adui-tree-select-selection__placeholder,
-.adui-tree-select-search__field__placeholder {
-  position: absolute;
-  top: 50%;
-  right: 9px;
-  left: 0;
-  max-width: 100%;
-  height: 20px;
-  margin-top: -10px;
-  overflow: hidden;
-  line-height: 20px;
-  white-space: nowrap;
-  text-align: left;
-  text-overflow: ellipsis;
-}
-.adui-tree-select-search__field__placeholder {
-  left: 10px;
-  color: var(--gray-700);
-}
-.adui-tree-select-search__field__mirror {
-  position: absolute;
-  top: 0;
-  left: 0;
-  white-space: pre;
-  opacity: 0;
-  pointer-events: none;
-}
-.adui-tree-select-search--inline {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-.adui-tree-select-search--inline .adui-tree-select-search__field__wrap {
-  width: 100%;
-  height: 100%;
-}
-.adui-tree-select-search--inline .adui-tree-select-search__field {
-  width: 100%;
-  height: 100%;
-  font-size: 100%;
-  line-height: 1;
-  background: transparent;
-  border-width: 0;
-  border-radius: 4px;
-  outline: 0;
-}
-.adui-tree-select-search--inline > i {
-  float: right;
-}
-.adui-tree-select-selection--multiple {
-  min-height: 30px;
-  padding-bottom: 3px;
-  cursor: text;
-  zoom: 1;
-
-  &:hover {
-    box-shadow: 0 0 0 1px var(--gray-600);
-  }
-}
-.adui-tree-select-selection--multiple::before,
-.adui-tree-select-selection--multiple::after {
-  content: "";
-  display: table;
-}
-.adui-tree-select-selection--multiple::after {
-  clear: both;
-}
-.adui-tree-select-selection--multiple .adui-tree-select-search--inline {
-  position: static;
-  padding: 0;
-  float: left;
-  width: auto;
-  max-width: 100%;
-}
-.adui-tree-select-selection--multiple
-  .adui-tree-select-search--inline
-  .adui-tree-select-search__field {
-  width: 0.75em;
-  max-width: 100%;
-}
-.adui-tree-select-selection--multiple .adui-tree-select-selection__rendered {
-  height: auto;
-  margin-bottom: -3px;
-  margin-left: 4px;
-  margin-right: 30px;
-}
-.adui-tree-select-selection--multiple .adui-tree-select-selection__placeholder {
-  margin-left: 6px;
-}
-.adui-tree-select-selection--multiple > ul > li,
-.adui-tree-select-selection--multiple
-  .adui-tree-select-selection__rendered
-  > ul
-  > li {
-  height: 24px;
-  margin-top: 3px;
-  line-height: 24px;
-}
-.adui-tree-select-selection--multiple .adui-tree-select-selection__choice {
-  position: relative;
-  float: left;
-  max-width: 99%;
-  margin-right: 4px;
-  padding: 0 18px 0 10px;
-  overflow: hidden;
-  border: 1px solid #e8e8e8;
-  border-radius: 4px;
-  cursor: default;
-  transition: padding 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-.adui-tree-select-selection--multiple
-  .adui-tree-select-selection__choice__disabled {
-  padding: 0 10px;
-}
-.adui-tree-select-selection--multiple
-  .adui-tree-select-selection__choice__content {
-  display: inline-block;
-  max-width: 100%;
-  overflow: hidden;
-  line-height: 22px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  transition: margin 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-.adui-tree-select-selection--multiple
-  .adui-tree-select-selection__choice__remove {
-  position: absolute;
-  top: 50%;
-  right: 2px;
-  margin-top: -7px;
-  width: 14px;
-  height: 14px;
-  cursor: pointer;
-  transition: all 0.3s;
-}
-.adui-tree-select-selection--multiple
-  .adui-tree-select-selection__choice__remove::before {
-  display: none;
-}
-.adui-tree-select-selection--multiple
-  .adui-tree-select-selection__choice__remove
-  .adui-tree-select-selection--multiple
-  .adui-tree-select-selection__choice__remove-icon {
-  display: block;
-}
-.adui-tree-select-selection--multiple
-  .adui-tree-select-selection__choice__remove:hover {
-  color: rgba(0, 0, 0, 0.75);
-}
-.adui-tree-select-open .adui-tree-select-selection--multiple {
-  box-shadow: 0 0 0 1px var(--primary-color),
-    0 0 0 4px rgba(255, 255, 255, 0.75), 0 0 0 4px var(--primary-color);
-  outline: none;
-}
-.adui-tree-select-open .adui-tree-select-selection--single {
-  // TODO
 }
 .adui-tree-select-dropdown {
   position: absolute;
@@ -644,16 +375,6 @@ li.adui-tree-select-tree-treenode-disabled
   white-space: nowrap;
 }
 .adui-tree-select-wrapper-maxTag {
-  .adui-tree-select-selection--multiple .adui-tree-select-selection__choice {
-    overflow: visible;
-  }
-
-  .adui-tree-select-selection__choice {
-    &:hover {
-      background-color: var(--gray-100);
-    }
-  }
-
   .adui-tree-select-maxPlaceholder {
     &::after {
       content: "";
