chore: channels start

--- a/site/theme/template/Content/ComponentDoc.scss
+++ b/site/theme/template/Content/ComponentDoc.scss
@@ -303,7 +303,7 @@
 
   pre {
     margin: 0;
-    padding: 16px 0;
+    padding: 16px;
     max-height: 600px;
     white-space: pre-wrap;
     overflow: auto;
