--- a/components/style/base.css
+++ b/components/style/base.css
@@ -4,6 +4,8 @@
   --ad-orange: rgb(237, 162, 12);
   --ad-blue: rgb(43, 123, 214);
   --ad-red: rgb(217, 81, 76);
+  --channels: rgb(250, 157, 59);
+
   --transparent-gray-0: rgba(0, 0, 0, 0);
   --transparent-gray-50: rgba(0, 0, 0, 0.02);
   --transparent-gray-100: rgba(0, 0, 0, 0.06);
@@ -16,6 +18,7 @@
   --transparent-gray-800: rgba(0, 0, 0, 0.58);
   --transparent-gray-900: rgba(0, 0, 0, 0.88);
   --transparent-gray-1000: rgb(0, 0, 0);
+
   --gray-0: #ffffff;
   --gray-50: #fafafa;
   --gray-100: #f2f2f2;
@@ -28,48 +31,10 @@
   --gray-800: #6b6b6b;
   --gray-900: #1f1f1f;
   --gray-1000: #000000;
-  --chart-blue: #3e79f0;
-  --chart-blue-2: #5e94ff;
-  --chart-light-blue: #9ad6ff;
-  --chart-light-blue-2: #bbe4ff;
-  --chart-orange: #ffae19;
-  --chart-orange-2: #ffcc41;
-  --chart-green: #76c84d;
-  --chart-green-2: #96d960;
-  --chart-purple: #8e84fd;
-  --chart-purple-2: #bca1ff;
-  --chart-red: #ff6d5e;
-  --chart-red-2: #ff9c92;
   --font-size-large: 16px;
   --font-size-medium: 14px;
   --font-size-small: 13px;
   --font-size-mini: 12px;
-  --grey-900: rgb(31, 31, 31);
-  --grey-800: rgb(107, 107, 107);
-  --ad-white: rgb(255, 255, 255);
-  --grey-50: rgb(250, 250, 250);
-  --grey-500: rgb(214, 214, 214);
-  --grey-100: rgb(240, 240, 240);
-  --grey-600: rgb(199, 199, 199);
-  --grey-200: rgb(235, 235, 235);
-  --grey-700: rgb(163, 163, 163);
-  --grey-300: rgb(230, 230, 230);
-  --grey-400: rgb(224, 224, 224);
-  --helper-text-13-weight: 600;
-  --helper-text-13-size: 13px;
-  --helper-text-13-line-height: 20px;
-  --helper-text-1-weight: 400;
-  --helper-text-1-size: 13px;
-  --helper-text-1-line-height: 20px;
-  --main-content-1-weight: 400;
-  --main-content-1-size: 16px;
-  --main-content-1-line-height: 28px;
-  --main-content-2-weight: 400;
-  --main-content-2-size: 14px;
-  --main-content-2-line-height: 24px;
-  --helper-text-2-weight: 400;
-  --helper-text-2-size: 12px;
-  --helper-text-2-line-height: 18px;
 
   --box-shadow-elevation-0: 0 0 0 1px rgba(223, 223, 223, 0.45);
   --box-shadow-elevation-1: 0 0 0 1px rgba(223, 223, 223, 0.5),
@@ -91,12 +56,6 @@
   --z-index-picker: 1080;
   --z-index-dropdown: 1080;
   --z-index-tooltip: 1090;
-
-  --screen-xs: 60;
-  --screen-sm: 96;
-  --screen-md: 128;
-  --screen-lg: 144;
-  --screen-xl: 192;
 
   --ease-out: cubic-bezier(0, 0, 0.2, 1);
   --ease-in: cubic-bezier(0.4, 0, 1, 1);
