--- a/components/drawer/style/_drawer.scss
+++ b/components/drawer/style/_drawer.scss
@@ -37,7 +37,7 @@ $prefix: "adui-drawer";
   &-header {
     flex: none;
     position: sticky;
-    z-index: 1;
+    z-index: calc(var(--z-index-tooltip) + 1);
     top: 0;
     display: flex;
     align-items: center;
