feat(TimePicker): 支持 24:00 选择

--- a/components/time-picker/style/_timepicker.scss
+++ b/components/time-picker/style/_timepicker.scss
@@ -41,7 +41,7 @@ $prefix: "adui-time";
 
   &-integerTimeSelect {
     overflow: auto;
-    width: var(--width);
+    width: calc(var(--width) * 1px);
   }
 
   &-item {
