style(TreeSelect): 修复单层级时的样式

--- a/components/tree-select/style/_tree.scss
+++ b/components/tree-select/style/_tree.scss
@@ -146,7 +146,7 @@ $prefix: "adui-tree-select";
     }
 
     &-single-level {
-      .#{$prefix}-tree-switcher {
+      .#{$prefix}-tree-switcher-noop {
         width: 0;
       }
     }
