style(mixins): 添加 overflow: overlay;

--- a/components/channels-dialog/style/_dialog.scss
+++ b/components/channels-dialog/style/_dialog.scss
@@ -53,8 +53,7 @@ $prefix: "adui-channels-dialog";
   &-body {
     flex: 1;
     padding: 32px;
-    overflow: auto;
-    @include mixins.scrollbar();
+    @include mixins.overlay();
   }
   &-footer {
     flex: none;
