--- a/components/dialog/style/_dialog.scss
+++ b/components/dialog/style/_dialog.scss
@@ -51,8 +51,7 @@ $prefix: "adui-dialog";
   &-body {
     padding: 24px;
     flex: 1;
-    overflow: auto;
-    @include mixins.scrollbar();
+    @include mixins.overlay();
   }
   &-footer {
     flex: none;
