--- a/components/nav/style/_nav.scss
+++ b/components/nav/style/_nav.scss
@@ -5,8 +5,7 @@ $prefix: "adui-nav";
 .#{$prefix} {
   &-wrapper {
     background-color: #fff;
-    overflow: auto;
-    @include mixins.scrollbar();
+    @include mixins.overlay();
 
     .#{$prefix}-item {
       padding-left: 28px;
@@ -64,17 +63,17 @@ $prefix: "adui-nav";
     position: relative;
     display: flex;
     align-items: center;
-    color: var(--gray-900);
+    color: var(--transparent-gray-900);
     cursor: pointer;
     transition: all var(--motion-duration-base) var(--ease-out);
 
     &:not(.#{$prefix}-item_disabled) {
       &:hover {
-        background-color: var(--gray-200);
+        background-color: var(--transparent-gray-200);
       }
 
       &:active {
-        background-color: var(--gray-300);
+        background-color: var(--transparent-gray-300);
       }
     }
 
@@ -108,7 +107,7 @@ $prefix: "adui-nav";
   &-icon {
     flex: none;
     margin-right: 8px;
-    fill: var(--gray-800);
+    fill: var(--transparent-gray-800);
   }
   &-item_selected {
     color: var(--primary-color);
@@ -123,7 +122,7 @@ $prefix: "adui-nav";
     }
   }
   &-item_disabled {
-    color: var(--gray-600);
+    color: var(--transparent-gray-600);
     cursor: not-allowed;
 
     .#{$prefix}-icon {
@@ -134,11 +133,11 @@ $prefix: "adui-nav";
     margin-top: 20px;
     margin-bottom: 20px;
     height: 1px;
-    background-color: var(--gray-200);
+    background-color: var(--transparent-gray-200);
   }
   &-groupTitle {
     line-height: 36px;
-    color: var(--gray-700);
+    color: var(--transparent-gray-700);
   }
   /* 尺寸 sizes */
   &-mini {
@@ -178,21 +177,21 @@ $prefix: "adui-nav";
     display: flex;
     align-items: center;
     padding-right: 16px;
-    color: var(--gray-900);
+    color: var(--transparent-gray-900);
     cursor: pointer;
     transition: all var(--motion-duration-base) var(--ease-out);
 
     &:hover {
-      background-color: var(--gray-200);
+      background-color: var(--transparent-gray-200);
     }
 
     &:active {
-      background-color: var(--gray-300);
+      background-color: var(--transparent-gray-300);
     }
   }
   &-arrow {
     flex: none;
-    fill: var(--gray-600);
+    fill: var(--transparent-gray-600);
     margin-left: 10px;
     transition: all var(--motion-duration-base) var(--ease-in-out);
     transform: rotate(180deg);
@@ -203,7 +202,7 @@ $prefix: "adui-nav";
   &-open {
     > .#{$prefix}-subTitle {
       .#{$prefix}-arrow {
-        fill: var(--gray-800);
+        fill: var(--transparent-gray-800);
         transform: rotate(0deg);
       }
     }
