--- a/components/style/mixins/_basic.scss
+++ b/components/style/mixins/_basic.scss
@@ -14,20 +14,23 @@
     background-clip: content-box;
     border: 4px solid transparent;
     border-radius: 14px;
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.4);
+    }
+
+    &:active {
+      background-color: rgba(0, 0, 0, 0.65);
+    }
   }
-  &::-webkit-scrollbar-track {
-    background-color: rgba(0, 0, 0, 0);
+}
+
+@mixin overlay() {
+  overflow: auto;
+  @supports (overflow: overlay) {
+    overflow: overlay;
   }
-  &::-webkit-scrollbar-track:hover {
-    background-color: rgba(0, 0, 0, 0.04);
-  }
-  &::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(0, 0, 0, 0.4);
-    border: 3px solid transparent;
-  }
-  &::-webkit-scrollbar-thumb:active {
-    background-color: rgba(0, 0, 0, 0.65);
-  }
+  @include scrollbar();
 }
 
 /**
