--- a/site/theme/template/Layout/site.scss
+++ b/site/theme/template/Layout/site.scss
@@ -23,32 +23,36 @@ body {
     "Microsoft YaHei UI", "Microsoft YaHei", "Source Han Sans CN", sans-serif;
 }
 
-html,
 body {
+  overflow: overlay;
+
   &::-webkit-scrollbar {
     width: 14px;
     height: 14px;
   }
+
   &::-webkit-scrollbar-thumb {
     min-width: 14px;
     min-height: 14px;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.15);
     background-clip: content-box;
     border: 4px solid transparent;
     border-radius: 14px;
   }
+
   &::-webkit-scrollbar-track {
-    background-color: #fff;
+    background-color: rgba(0, 0, 0, 0);
   }
-  &::-webkit-scrollbar-track:hover {
-    background-color: var(--gray-100);
-  }
+
   &::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(0, 0, 0, 0.35);
-    border: 3px solid transparent;
+    background-color: rgba(0, 0, 0, 0.4);
   }
+
   &::-webkit-scrollbar-thumb:active {
-    background-color: rgba(0, 0, 0, 0.55);
+    background-color: rgba(0, 0, 0, 0.65);
+  }
+  &::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0);
   }
 }
 
