--- a/components/tree-select/style/_tree.scss
+++ b/components/tree-select/style/_tree.scss
@@ -198,7 +198,7 @@ $prefix: "adui-tree-select";
           left: 0;
           z-index: 2;
           width: 100%;
-          height: 32px;
+          height: 100%;
         }
       }
     }
