--- a/components/time-picker/style/_timepicker.scss
+++ b/components/time-picker/style/_timepicker.scss
@@ -36,6 +36,16 @@ $prefix: "adui-time";
     &:not(:last-child) {
       box-shadow: 1px 0 0 var(--gray-300);
     }
+
+    &:first-child {
+      border-top-left-radius: 6px;
+      border-bottom-left-radius: 6px;
+    }
+
+    &:last-child {
+      border-top-right-radius: 6px;
+      border-bottom-right-radius: 6px;
+    }
   }
 
   &-integerTimeSelect {
