--- a/components/tree-select/style/_tree.scss
+++ b/components/tree-select/style/_tree.scss
@@ -90,6 +90,7 @@ $prefix: "adui-tree-select";
     position: absolute;
     top: -9999px;
     left: -9999px;
+    padding: 4px 0;
     font-size: 13px;
     color: var(--transparent-gray-900);
     z-index: var(--z-index-dropdown);
