--- a/site/theme/template/Layout/site.scss
+++ b/site/theme/template/Layout/site.scss
@@ -66,7 +66,15 @@ body {
     box-shadow: 0 0 10px var(--primary-color), 0 0 5px var(--primary-color) !important;
   }
 
+  #nprogress .spinner {
+    top: 21px !important;
+    right: 29px !important;
+  }
+
   #nprogress .spinner-icon {
+    width: 30px;
+    height: 30px;
+    opacity: 0.8;
     border-top-color: var(--primary-color) !important;
     border-left-color: var(--primary-color) !important;
   }
