fix(DatePicker): 修复 shortcuts 样式错误

--- a/components/date-picker/style/_date-picker.scss
+++ b/components/date-picker/style/_date-picker.scss
@@ -277,6 +277,13 @@ $prefix: "adui-date";
       border-bottom: none !important;
     }
   }
+  &-popup {
+    display: flex;
+
+    > div:last-child {
+      flex: 1;
+    }
+  }
   &-shortcuts {
     flex: none;
     padding-top: 8px;
