--- a/components/table/style/_table.scss
+++ b/components/table/style/_table.scss
@@ -109,11 +109,11 @@ $prefix: "adui-table";
       transition: box-shadow var(--motion-duration-base) var(--ease-in-out);
     }
 
-    .#{$prefix}-overflow-x &_leftLast {
+    &_leftLast {
       box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.08) inset,
         1px 0 2px 0 rgba(0, 0, 0, 0.05), 1px 0 0 0 rgba(0, 0, 0, 0.05);
     }
-    .#{$prefix}-overflow-x &_rightFirst {
+    &_rightFirst {
       box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.08) inset,
         -1px 0 2px 0 rgba(0, 0, 0, 0.05), -1px 0 0 0 rgba(0, 0, 0, 0.05);
     }
@@ -183,10 +183,10 @@ $prefix: "adui-table";
       }
     }
 
-    .#{$prefix}-overflow-x &_leftLast {
+    &_leftLast {
       box-shadow: 1px 0 3px 0 rgba(0, 0, 0, 0.05), 1px 0 0 0 rgba(0, 0, 0, 0.05);
     }
-    .#{$prefix}-overflow-x &_rightFirst {
+    &_rightFirst {
       box-shadow: -1px 0 3px 0 rgba(0, 0, 0, 0.05),
         -1px 0 0 0 rgba(0, 0, 0, 0.05);
     }
