--- a/components/tooltip/style/_tooltip.scss
+++ b/components/tooltip/style/_tooltip.scss
@@ -11,6 +11,7 @@ $prefix: "adui-tooltip";
   &-base {
     max-width: 250px;
     min-height: 28px;
+    width: max-content;
     word-break: break-all;
 
     &-bottom,
